Chore: fix bundle text styling on mobile

--- a/src/styles/templates/product.scss
+++ b/src/styles/templates/product.scss
@@ -255,8 +255,7 @@
 
         p {
           display: inline-block;
-          background-color: white;
-          border-left: 1px solid #ccc;
+          border-left: 1px solid #8a8a8a;
           color: #000;
           padding: 0 8px;
           font-family: 'neuzeit_grotesk_regular';
